Fri Mar 16 10:45:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/common.h:
        * tests/ZIOP/client.cpp:
        * tests/ZIOP/server.cpp:
          Remove scoreboard warnings.

Thu Mar 15 10:35:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * bin/tao_orb_tests.lst
          ZIOP test actually require BZIP2 in addition to ZLIB.

Thu Mar 15 09:17:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/common.h:
        * tests/ZIOP/client.cpp:
        * tests/ZIOP/server.cpp:
          With the recent change (Mon Feb 27 08:16:27 UTC 2012  Johnny Willemsen)
          Putting the zlib compressors into a map for reuse, the ZIOP test needed to be updated
          to obtain the correct compressor to determine if the compression had worked.
          i.e. the client needs to know what level of compression was actually used
          to talk with the server NOT the level it was advertising it was capable of.

Wed Mar 14 14:05:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * bin/tao_orb_tests.lst
          ZIOP config removed since ZIOP now built by default.

Tue Mar 13 20:44:11 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype(has_supported_op):

          Fixed typo in IF block termination check. Thanks to
          Michael Frommberger <michael dot frommberger at gmx
          dot net> for reporting the oversight.

Tue Mar 13 18:50:38 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/orbsvcs/CosNotifyFilterExt.idl:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.cpp:
        * orbsvcs/tests/Notify/Basic/ExtendedFilter.h:

          Fixed fuzz and unused variable warnings on optimized builds.

Tue Mar 13 16:50:37 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_commponent.cpp(scan):

          Modified be_component::scan() to check the component's